black jitter and scroll on mobile page fixed

--- a/apps/docs/app/(pages)/mobile-page/mobile.scss
+++ b/apps/docs/app/(pages)/mobile-page/mobile.scss
@@ -4,6 +4,7 @@
     padding: 2rem 0;
     line-height: 1.2;
     overflow-y: hidden;
+    box-sizing: border-box;
 
     .logo {
         margin-top: 1.5rem;
